--- a/docs/source/_static/css/custom-pydata.css
+++ b/docs/source/_static/css/custom-pydata.css
@@ -86,6 +86,11 @@ html[data-theme="dark"] button.copybtn {
     filter: invert(0.88) brightness(1.1);
 }
 
+/* Color of function signature in dark mode */
+html[data-theme="dark"] dt:target, span.highlighted {
+    background-color: #373737;
+}
+
 /* Logo color */
 img.logo__image {
     /* filter: grayscale(1) brightness(1.5); */
